Cleanup of deprecations and warnings.